# markdown-it-rust-plugins

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/markdown-it-lazyload/: Cargo.toml  LICENSE  README.md
crates/markdown-it-lazyload/src/: lib.rs
crates/markdown-it-lazyload/tests/: lib.rs
